--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,79 @@ a {
 p {
   margin-bottom: 1.5em; }
 
+h7 {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  font-size: 5rem;
+  background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+h8 {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  font-size: 4rem;
+  background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+h9 {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  font-size: 3rem;
+  background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+h10 {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  font-size: 2rem;
+  background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* code snippet box */
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+pre[class*="language-"] {
+  position: relative;
+  overflow: auto;
+  background: black;
+
+  /* make space  */
+  margin: 5px 0;
+  padding: 1.75rem 0 1.75rem 1rem;
+  border-radius: 10px;
+}
+
+pre[class*="language-"] button {
+  position: absolute;
+  top: 4px;
+  right: 6px;
+  cursor: pointer;
+  color: #080a08;
+  background: rgb(84, 255, 41);
+  border-radius: 0.5em;
+  padding: 2px 7px;
+}
+
+pre[class*="language-"] button:hover {
+  cursor: pointer;
+}
+
+/* end code snippet box */
+
+
 h1, h2, h3, h4, h5, h6 {
   color: #000;
   font-family: "Playfair Display", Georgia, serif;
@@ -355,34 +428,6 @@ figure {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
               width: 100%; } }
 
-/* setting for coding box */
-pre {
-    position: relative;
-    background: black;
-    padding: 10px;
-    font-size: 15px;
-    word-wrap: break-word;
-    white-space: pre-wrap;
-    border: 1px solid #e6e7e9;
-    max-width: 500px;
-    color: white;
-    border-radius: 15px;
-}
-        
-.copy-button {
-  position: absolute;
-  top: 8px;
-  right: 10px;
-  cursor: pointer;
-  color: #fff;
-  background: gray;
-  border-radius: 0.5em;
-  padding: 2px 7px;
-}
-        
-.copy-button:hover {
-  color: #000;
-}
 
 body.offcanvas {
   overflow-x: hidden; }
