--- a/css/style.css
+++ b/css/style.css
@@ -52,16 +52,11 @@ h8 {
   -webkit-text-fill-color: transparent;
 }
 
-/*
-green gradiant
-background-image: linear-gradient(to bottom, #d7f935, #9fdd3f, #6dc046, #3ea148, #048346);
-*/
-
 h9 {
   margin-top: 0px;
   margin-bottom: 10px;
   font-size: 3rem;
-  background-image: linear-gradient(to right bottom, #fb57b6, #e56dcf, #cc80e0, #b28fea, #9b9ced, #8aa6f3, #7ab0f5, #6db8f5, #56c4fb, #3bcffe, #1bdafd, #00e4f9);
+  background-image: linear-gradient(to right bottom, #097909, #43a047, #1bdafd, #2196f3,  #7e57c2);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -71,6 +66,16 @@ h10 {
   margin-bottom: 10px;
   font-size: 2.5rem;
   background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #f9a825, #ff5722);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+h11 {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  font-size: 5rem;
+  background-image: linear-gradient(to bottom, #2196f3, #26c6da, #fdbb2d, #ff5722);
+  /*background: linear-gradient(to right, #2196f3, #26c6da, #9fdd3f, #6dc046, #3ea148, #048346);*/
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
