--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@
 *	Edit this section
 *
 * ======================================================= */
+
+/*
+#colorlib-aside .position 
+to edit the stack for the items in the nav aside section
+*/
+
 body {
   font-family: "Quicksand", Arial, sans-serif;
   font-weight: 400;
@@ -27,7 +33,7 @@ a {
   -o-transition: 0.5s;
   transition: 0.5s; }
   a:hover, a:active, a:focus {
-    color: #2c98f0;
+    color: #02ae04;
     outline: none;
     text-decoration: none !important; }
 
@@ -88,6 +94,13 @@ h12 {
   background: linear-gradient(to right, #26c6da, #0021D8, #040101);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+/* Navigation */
+#colorlib-aside .aside-menu {
+  display: flex; /* Enable Flexbox */
+  flex-direction: column; /* Stack items vertically */
+  gap: 0em; /* Add spacing between items */
 }
 
 /* Cards on Home page */
@@ -399,11 +412,13 @@ figure {
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     border-radius: 50%; }
+    /*
   #colorlib-aside .position {
     display: block;
     margin-bottom: 2em;
     font-size: 12px;
     text-transform: uppercase; }
+    */
   #colorlib-aside #colorlib-logo {
     text-align: right;
     font-weight: 700;
@@ -793,7 +808,8 @@ body.offcanvas {
   font-weight: 400;
   top: 50%;
   line-height: 1;
-  margin-top: -7px; }
+  margin-top: -7px;
+ }
 
 .panel-heading a.collapsed:after {
   content: "\e114"; }
