--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,9 @@ a {
   -o-transition: 0.5s;
   transition: 0.5s; }
   a:hover, a:active, a:focus {
-    color: #2c98f0;
+    color: #02ab51;
     outline: none;
-    text-decoration: none !important; }
+    text-decoration: underline; }
 
 p {
   margin-bottom: 1.5em; 
@@ -361,6 +361,10 @@ figure {
   width: 100%;
   overflow: hidden;
   position: relative; }
+
+  .aside-menu span {
+    margin-bottom: 0.5em !important; /* or 0.5em */
+  }
 
 #colorlib-aside {
   padding-top: 3em;
